# lockfree_demo

./: CMakeLists.txt  LICENSE  README.md  broken_main.cpp  demo_main.cpp  lockfree_main.cpp  sync_test_main.cpp  take_test_main.cpp
include/: exchange_buffer_interface.hpp
include/broken/: take_buffer.hpp
include/demo/: d1_cas_loop.hpp  d2_index_pool.hpp  d2_take_buffer.hpp  d3_index_pool.hpp  d3_take_buffer.hpp  d4_take_buffer.hpp  d5_read_buffer.hpp  d6_read_buffer.hpp
include/lockfree/: cas_loop.hpp  exchange_buffer.hpp  index_pool.hpp  read_buffer.hpp  storage.hpp  sync_counter.hpp  take_buffer.hpp
include/not_lockfree/: cas_semantics.hpp  exchange_buffer.hpp  read_buffer.hpp  take_buffer.hpp
include/test/: test_take.hpp
src/: sync_counter.cpp
test/: CMakeLists.txt  exchange_buffer_stresstest.cpp  exchange_buffer_test.cpp  sync_counter_stresstest.cpp  test.cpp  test_sync.hpp
